--- a/stilo.css
+++ b/stilo.css
@@ -23,19 +23,22 @@ a {
 }
 
 body {
-    padding-top: 5vh; /*  view height -> 5% da tela */
+    padding-top: 7vh; /*  view height -> 5% da tela */
     background-image: url(img/5.png);
-    background-size: cover;
-    background-position-y: -550px;
+    background-size: 825px;
+    background-repeat: no-repeat;
+    background-position: left;
+    background-position-y: -5px;
 }
 
 /* form formulario */
 
 #main-container {
     width: 500px;
+    height: 500px;
     margin-left: auto;
     margin-right: auto;
-    background-color: rgba(212, 193, 100, 0.869);
+    background-color: #f5f5f5;
     border-radius: 10px;
     padding: 25px;
 }
@@ -44,4 +47,70 @@ body {
     text-align: center;
     margin-bottom: 25px;
     font-size: 1.6rem;
+}
+
+form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.full-box {
+    flex: 1 1 100%;
+    position: relative;
+}
+
+.half-box {
+    flex: 1 1 45%;
+    position: relative;
+}
+
+.spacing {
+    margin-right: 2.5%;
+}
+
+label {
+    font-weight: bold;
+    font-size: .8rem;
+}
+
+input {
+    border-bottom: 2px solid #323232;
+    padding: 10px;
+    font-size: .9rem;
+    margin-bottom: 40px;
+}
+
+input:focus {
+    border-color: #be9749;
+}
+
+input[type="submit"] {
+    background-color: #be9749;
+    color: #f5f5f5;
+    border: none;
+    border-radius: 20px;
+    height: 40px;
+}
+
+#agreement {
+    margin-right: 5px;
+}
+
+#agreement, #agreement-label {
+    display: inline-block;
+    width: auto;
+
+}
+
+/* Validação */
+.error-validation {
+    color: #ff1a1a;
+    position: absolute;
+    top: 57px;
+    font-size: .8rem;
+}
+
+.template {
+    display: none;
 }
